# gon

./: .gitignore  README.md
backend/: manage.py  pyproject.toml
backend/gon/settings/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: nuxt.config.js  package-lock.json  package.json
frontend/pages/: index.vue
