[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["wkd3475"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
